k8s-apps/product/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-v1
  namespace: microservices
  labels:
    app: product
    version: v1

spec:
  replicas: 2

  selector:
    matchLabels:
      app: product
      version: v1

  template:
    metadata:
      labels:
        app: product
        version: v1

    spec:
      containers:
        - name: product
          image: hashicorp/http-echo:1.0

          args:
            - "-text=Hello from Product Service v1"
            - "-listen=:8080"

          ports:
            - name: http
              containerPort: 8080

          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 20
