k8s-apps/product/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: microservices
  labels:
    app: product

spec:
  selector:
    app: product

  ports:
    - name: http
      port: 8080
      targetPort: 8080

  type: ClusterIP
