k8s-apps/product/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: product
  namespace: microservices

spec:
  host: product

  subsets:
    - name: v1
      labels:
        version: v1

    - name: v2
      labels:
        version: v2
