k8s-apps/product/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product
  namespace: microservices

spec:
  hosts:
    - product

  http:
    - route:
        - destination:
            host: product
            subset: v1
          weight: 90

        - destination:
            host: product
            subset: v2
          weight: 10
